--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,7 +10,7 @@
     </div>
     <div class="logo"></div>
     <div class="chat">
-      <h1>Chat</h1>    
+      <h1>Happenings</h1>    
       <ul id="messages"></ul>
       <form id="form" action="">
         <input id="message-input" autocomplete="off" /><button id="send">Send</button>
@@ -19,7 +19,8 @@
 
     <div class="stats-wrapper">
       <div>Real Time block</div>
-      <div>Attendies:102</div>
+      <div>Attendies:"Count here"</div>
+      <div>Group Contacts</div>
     </div>
     <div class="tabs">
       <div class="tab-item tab-item-1">Ask a questions</div>
