--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,12 +5,14 @@
     <link rel="stylesheet" href="/css/toggle.css">
   </head>
   <body>
-    <div id="main-wrapper">
-
+  <div id="main-wrapper">
+    <div>
+      <h1>Main Focus</h1>
+      <div id="main-focus"></div>
     </div>
     <div class="logo"></div>
     <div class="chat">
-      <h1>Happenings</h1>    
+      <h1>Stream Timeline</h1>    
       <ul id="messages"></ul>
       <form id="form" action="">
         <input id="message-input" autocomplete="off" /><button id="send">Send</button>
@@ -35,7 +37,7 @@
         </label>
       </div>
     </div>
-  </div>
+</div>
     <script src="/socket.io/socket.io.js"> </script>
 
     <script>
