--- a/public/css/toggle.css
+++ b/public/css/toggle.css
@@ -89,3 +89,11 @@ border-radius: 50%;
 background-color: black;
 color: white;
 }
+ul.no-bullets {
+  list-style-type: none; /* Remove bullets */
+  padding: 0; /* Remove padding */
+  margin: 0; /* Remove margins */
+}
+#main .content {
+  border-style: solid;
+}
