--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,46 +5,43 @@
   <title>MeshWW Socket.IO Interface</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-  <link rel="stylesheet" href="/css/toggle.css">
+  <link rel="stylesheet" href="/css/styles.css">
 </head>
-
 <body>
-  <div class="logo"></div>
-  <div class="container">
-    <div class="row">
-      <div id="main" class="col-8">
-        <h1>Main Focus</h1>
-        <div class="content">
-
-        </div>
-      </div>
-      <div class="chat col-4">
-        <h1>Stream Timeline</h1>
-        <ul id="messages" class="no-bullets"></ul>
-        <form id="form" action="">
-          <input id="message-input" autocomplete="off" /><button id="send">Send</button>
-        </form>
+  <div class="row"> Kanban - Documents - Timeline - Slides </div>
+  <div class="row">
+    <div id="main" class="col-8">
+      <h1>Main Focus</h1>
+      <div id="main-content" class="main-content">
       </div>
     </div>
+    <div class="chat col-4">
+      <h1>Stream</h1>
+      <div class="messages-wrapper">
+        <ul id="messages" class="no-bullets"></ul>
+      </div>
+      <form id="form" action="">
+        <input id="message-input" autocomplete="off" /><button id="send">Send</button>
+      </form>
+    </div>
   </div>
-  <div class="stats-wrapper">
-    <div>Real Time block</div>
-    <div>Attendies:"Count here"</div>
-    <div>Group Contacts</div>
-  </div>
-  <div class="tabs">
-    <div class="tab-item tab-item-1">Toggle item</div>
-  </div>
-  <div class="control-wrapper">
+  <div class="control-wrapper row">
     <div class="admin-panel">Control Panel</div>
-    <div class="control-item">
-      <audio id="sound" src="/sounds/AnimeWowSoundEffect.mp3" preload="auto"> </audio>
-      <button class="btn btn-primary" onclick="document.getElementById('sound').play();">Play
-        it</button>
-      <div>Toggle item</div>
-      <label id="control-qa" class="switch">
+    <div class="control-item col-8 row">
+      <audio id="sound" src="/sounds/message.mp3" preload="auto"> </audio>
+      <div>Mute Sound</div>
+      <label id="control-ms" class="switch col-2">
         <span class="slider round"> </span>
       </label>
+      <div>Sync control</div>
+      <label id="control-lc" class="switch col-2">
+        <span class="slider round"> </span>
+      </label>
+    </div>
+    <div class="stats-wrapper col-4">
+      <div>Real Time block</div>
+      <div>Attendies:"Count here"</div>
+      <div>Group Contacts</div>
     </div>
   </div>
   <script src="/socket.io/socket.io.js"> </script>
